<resources>
    <string name="app_name">Room</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Tarefas">Listar Tarefas</string>
    <string name="NovaTarefa">Nova Tarefa</string>

    <!--    Text-->
    <string name="Nova_Atividade">Cadastrar Nova Atividade</string>
    <string name="descrição_seta">icone de uma seta</string>
    <string name="titulo_itens">tarefas</string>


    <!--    Campos de identificação -->
    <string name="titulo">Titulo</string>
    <string name="descrição">Descrição</string>
    <string name="nvl_prioridade">Nivel De Prioridade</string>

    <!--    Meus chequeBox -->
    <string name="cheq_baixa">Baixo</string>
    <string name="cheq_media">Média</string>
    <string name="cheq_alta">Alta</string>

    <!--    Buttons -->
    <string name="btn_salvar">Salvar</string>

    <!--    campos de validação -->
    <string name="campos_vazios">Preencher Todos os campos</string>
    <string name="erro_prioridade">Selecione uma prioridade</string>
    <string name="atividade_salva">Atividade Salva</string>


</resources>