<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.actives.fragments.ListarTarefaFragment">

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="30sp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:contentDescription="@string/descrição_seta"
        android:src="@drawable/ic_voltar"
        app:layout_constraintBottom_toBottomOf="@id/view"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintTop_toTopOf="@id/view" />

    <TextView
        android:id="@+id/txt_nova_atividade"
        android:layout_width="356dp"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:text="@string/Nova_Atividade"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <TextView
        android:id="@+id/titulo_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:text="@string/titulo"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_nova_atividade" />

    <EditText
        android:id="@+id/ed_txt_titulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titulo_txt"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/descricao_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20sp"
        android:text="@string/descrição"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_txt_titulo" />

    <EditText
        android:id="@+id/ed_txt_descricao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descricao_txt"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/txt_prioridade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="18dp"
        android:text="@string/nvl_prioridade"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_txt_descricao" />

    <CheckBox
        android:id="@+id/cheq_baixa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:buttonTint="@color/col_cheq_baixa"
        android:text="@string/cheq_baixa"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_prioridade" />

    <CheckBox
        android:id="@+id/cheq_media"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:buttonTint="@color/col_cheq_media"
        android:text="@string/cheq_media"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/cheq_alta"
        app:layout_constraintStart_toStartOf="@id/cheq_baixa"
        app:layout_constraintTop_toBottomOf="@id/txt_prioridade" />

    <CheckBox
        android:id="@+id/cheq_alta"


        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:buttonTint="@color/col_cheq_alta"
        android:text="@string/cheq_alta"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cheq_media"
        app:layout_constraintTop_toBottomOf="@id/txt_prioridade" />

    <Button
        android:id="@+id/btn_cadastrar_atividade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30sp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/black"
        android:text="@string/btn_salvar"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cheq_baixa" />

</androidx.constraintlayout.widget.ConstraintLayout>